# site

./: .dockerignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  bacon.toml  build.rs  checkpoint.html  deny.toml  docker-compose.yaml  docker-compose.yml  index.html  next.config.js  package.json  rustfmt.toml  styles.css  styles.input.css  tailwind.config.js  taplo.toml  tsconfig.json  types.d.ts
.github/: dependabot.yml
.github/workflows/: ci-cd.yaml  ci-cd.yml  cloud-run.yml  security-audit.yml
assets/css/: style.css  style.scss
components/: blog-card.tsx  blog-post-card.tsx  elements.tsx  footer.tsx  index.tsx  layout.tsx  link.tsx  nav.tsx  projects.tsx  repo-card.tsx  section.tsx  seo.tsx  subheading.tsx  typewriter.tsx
components/blog/: card.tsx  components.tsx  seo.tsx
components/elements/: a.tsx  h1.tsx
components/elements/headings/: index.tsx
components/headings/: h1.tsx  h2.tsx
components/layouts/: main.tsx
components/layouts/blog/: header.tsx  index.tsx  main.tsx
components/mdx/: index.tsx
components/nav/: index.tsx  nav-item.tsx  nav.tsx
constants/: posts.ts
content/: projects.yml
content/blog/: hello-world.md  test.md
content/posts/: cs-in-a-weekend.mdx  first-post.mdx  hello-world.md
content/resume/: resume.typ
css/: main.css  main.css.map  main.scss  style.css  style.css.map  style.scss
data/posts/: blog-troubles.mdx  first-post.mdx  man.mdx  on-the-phone.mdx  phone-post.mdx  test-post.mdx  winter-break.mdx
html/: index.html  index.nginx-debian.html
info/: index.html
info.vidhan/: index.html
info/css/: main.css  main.css.map  main.scss
layouts/: blog.tsx  global.tsx  main.tsx  wrapper.tsx
layouts/blog/: article.tsx
open-graph/: common.typ  global.typ  post.typ
pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  _error.tsx  blog.tsx  index.tsx  projects.tsx  triple-tac-toe.tsx
pages/post/: [slug].tsx
pages/posts/: [slug].tsx
pages/triple-tac-toe/: index.tsx
posts/: first-post.mdx  hello-world.md  open-graph.md
public/: LICENSE.txt
public/css/: styles.css
resume/: resume.typ  resume.yaml
src/: app.rs  blog_post.rs  config.rs  document.rs  error.rs  highlighter_configs.rs  icon.rs  icons.rs  layout.rs  lib.rs  main.rs  pages.rs  post.rs  project.rs  static.rs  wozeify.rs
src/components/: blog_card.rs  footer_link.rs  icons.rs  mod.rs  nav_link.rs  project.rs  project_card.rs  project_link.rs  section.rs  seo.rs
src/components/blog/: card.rs  link.rs  mod.rs  post.rs
src/components/footer/: link.rs  mod.rs  ring.rs
src/components/nav/: link.rs  mod.rs
src/layout/: mod.rs  seo.rs
src/layout/footer/: link.rs  mod.rs  ring.rs
src/layout/nav/: link.rs  mod.rs
src/pages/: blog.rs  mod.rs  projects.rs
src/pages/blog/: components.rs  mod.rs
src/pages/projects/: components.rs  mod.rs
src/routes/: mod.rs  static.rs
src/syntax_highlighting/: html_generator.rs  mod.rs
src/tree-sitter/queries/html/: highlights.scm  injections.scm
src/tree-sitter/queries/rust/: highlights.scm  injections.scm
src/tree-sitter/rust/: highlights.scm  injections.scm
static/: style.css  styles.css  styles.input.css
styles/: global.css  globals.css  highlightjs.css  main.css  prism.css
tree-sitter/queries/css/: highlights.ext.scm
tree-sitter/queries/dockerfile/: highlights.scm
tree-sitter/queries/html/: highlights.scm  injections.scm
tree-sitter/queries/rust/: highlights.scm  injections.scm
types/: index.ts
utils/: mdx.ts  post-from-slug.ts
