[package]
authors = ["Vidhan Bhatt <me@vidhan.io>"]
edition = "2021"
license = "AGPL-3.0"
name = "vidhan-site"
publish = false
version = "0.1.0"


[dependencies]
axum = { version = "0.7", features = ["macros", "tracing"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
color-eyre = "0.6"
dotenvy = "0.15"
envy = "0.4"
html-escape = "0.2"
hyper = "1.0"
include_dir = "0.7"
# TODO: use the latest version of maud once it's released
maud = { git = "https://github.com/vidhanio/maud", branch = "patch-1", features = [
    "axum",
] }
mime = "0.3"
postcard = "1.0.8"
pulldown-cmark = { git = "https://github.com/raphlinus/pulldown-cmark" }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "1"
time = { version = "0.3", features = ["macros", "serde-human-readable"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tree-sitter = "0.20"
tree-sitter-highlight = "0.20"
tree-sitter-html = "0.19"
tree-sitter-java = "0.20"
tree-sitter-rust = "0.20"

[build-dependencies]
gix = { version = "0.56", default-features = false }

[lints]
    [lints.rust]
    missing_copy_implementations = "warn"
    missing_debug_implementations = "warn"
    # missing_docs = "warn"
    unsafe_code = "forbid"

    [lints.clippy]
    nursery = "warn"
    pedantic = "warn"
