[package]
name = "vidhan-site"

authors = ["Vidhan Bhatt <me@vidhan.io>"]
edition = "2021"
license = "AGPL-3.0"
publish = false
version = "0.0.0"

build = "build/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "tracing"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
color-eyre = "0.6"
dotenvy = "0.15"
envy = "0.4"
hypertext = { version = "0.5", features = ["axum"] }
mime = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
base64 = "0.22"
headless_chrome = "1"
heck = "0.5"
html-escape = "0.2"
hypertext = "0.5"
prettyplease = "0.2"
proc-macro2 = "1"
pulldown-cmark = { git = "https://github.com/raphlinus/pulldown-cmark" }
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
syn = "2"
tree-sitter = "0.22"
tree-sitter-css = "0.23"
tree-sitter-dockerfile = { git = "https://github.com/camdencheek/tree-sitter-dockerfile" }
tree-sitter-highlight = "0.22"
tree-sitter-html = "0.20"
tree-sitter-java = "0.21"
tree-sitter-rust = "0.21"

[lints]
    [lints.rust]
    missing_copy_implementations = "warn"
    missing_debug_implementations = "warn"
    missing_docs = "warn"
    unsafe_code = "forbid"

    [lints.clippy]
    nursery = "warn"
    pedantic = "warn"
