[package]
name = "vidhan-site"
version = "0.0.0"
authors = ["Vidhan Bhatt <me@vidhan.io>"]
edition = "2024"
license = "AGPL-3.0"
build = "build/main.rs"
publish = false

[dependencies]
aho-corasick = "1.1.3"
axum = { version = "0.8", features = ["macros", "tracing"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
color-eyre = "0.6"
dotenvy = "0.15"
envy = "0.4"
futures-util = { version = "0.3.31", default-features = false }
hypertext = { features = ["axum"], git = "https://github.com/vidhanio/hypertext" }
mime = "0.3"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[build-dependencies]
heck = "0.5"
html-escape = "0.2"
hypertext = { git = "https://github.com/vidhanio/hypertext" }
ico = "0.4.0"
lightningcss = { version = "1.0.0-alpha.67", default-features = false, features = ["browserslist"] }
prettyplease = "0.2"
proc-macro2 = "1"
pulldown-cmark = { git = "https://github.com/raphlinus/pulldown-cmark" }
quote = "1"
resvg = { version = "0.45.1", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
syn = { version = "2", default-features = false, features = ["parsing"] }
time = "0.3"
tree-sitter = "0.24"
tree-sitter-css = "0.23"
tree-sitter-dockerfile = { git = "https://github.com/camdencheek/tree-sitter-dockerfile" }
tree-sitter-highlight = "0.24"
tree-sitter-html = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
typst = "0.13"
typst-kit = { version = "0.13", default-features = false, features = ["fonts"] }
typst-pdf = "0.13"
typst-render = "0.13"

[lints]
[lints.clippy]
nursery = "warn"
pedantic = "warn"

[lints.rust]
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
missing_docs = "warn"
unsafe_code = "forbid"

